fix: fix apply promotion